--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,10 @@ version: "3"
 
 services:
   web:
-    build: .
-    command: python manage.py runserver 0:8000
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: python -u manage.py runserver 0:8000
     ports:
       - "8000:8000"
     volumes:
