--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-Django
-psycopg2
+Django~=4.1.3
+psycopg2~=2.9.5
 requests
 social-auth-app-django
-django-allauth
+django-allauth~=0.51.0
 pandas==1.4.2
-openpyxl
+openpyxl~=3.0.10
 gunicorn
 django-dbconn-retry
 scikit-learn==1.1.3
 numpy==1.23.5
 neo4j
+joblib~=1.2.0
