--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,14 @@ psycopg2~=2.9.5
 requests
 social-auth-app-django
 django-allauth~=0.51.0
-pandas==1.4.2
+pandas
 openpyxl~=3.0.10
 gunicorn
 django-dbconn-retry
-scikit-learn==1.1.3
 numpy==1.23.5
 neo4j
 joblib~=1.2.0
 django-environ
+django-storages[google]==1.13.1
+google-cloud-secret-manager==2.12.6
+uwsgi
