--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -20,7 +20,7 @@ env:
   PROJECT_ID: ornate-shine-367407
   GAR_LOCATION: asia-northeast3 # TODO: update region of the Artifact Registry
   GKE_CLUSTER: dslounge    # TODO: update to cluster name
-  GKE_ZONE: asia-northeaet3-b   # TODO: update to cluster zone
+  GKE_ZONE: asia-northeast3-b   # TODO: update to cluster zone
   DEPLOYMENT_NAME: deploy # TODO: update to deployment name
   REPOSITORY: jihoopark # TODO: update to Artifact Registry docker repository
   IMAGE: static-site
