--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -21,7 +21,7 @@ env:
   GAR_LOCATION: asia-northeast3 # TODO: update region of the Artifact Registry
   GKE_CLUSTER: dslounge    # TODO: update to cluster name
   GKE_ZONE: asia-northeast3-b   # TODO: update to cluster zone
-  DEPLOYMENT_NAME: deploy # TODO: update to deployment name
+  DEPLOYMENT_NAME: dslounge # TODO: update to deployment name
   REPOSITORY: jihoopark # TODO: update to Artifact Registry docker repository
   IMAGE: static-site
 
@@ -54,15 +54,17 @@ jobs:
 #       with:
 #         credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
 
+    # Setup gcloud CLI
+    - name: Set up Cloud SDK
+      uses: google-github-actions/setup-gcloud@v1
+      
     - name: Docker configuration
       run: |-
         echo ${{steps.auth.outputs.access_token}} | docker login -u oauth2accesstoken --password-stdin https://$GAR_LOCATION-docker.pkg.dev
     # Get the GKE credentials so we can deploy to the cluster
     - name: Set up GKE credentials
-      uses: google-github-actions/get-gke-credentials@v1
-      with:
-        cluster_name: ${{ env.GKE_CLUSTER }}
-        location: ${{ env.GKE_ZONE }}
+      run: |-
+        gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
 
     # Build the Docker image
     - name: Build
