--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -61,11 +61,16 @@ jobs:
     - name: Docker configuration
       run: |-
         echo ${{steps.auth.outputs.access_token}} | docker login -u oauth2accesstoken --password-stdin https://$GAR_LOCATION-docker.pkg.dev
+    
+    - name: Enable role
+      run: |-
+        gcloud services enable container.googleapis.com
+    
     # Get the GKE credentials so we can deploy to the cluster
     - name: Set up GKE credentials
       run: |-
         gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
-
+    
     # Build the Docker image
     - name: Build
       run: |-
